Fix: button has full width on mobile (#232)
* feat: button has full width on mobile

* feat: make mobile full width optional

--- a/src/styles/core/_components-page.scss
+++ b/src/styles/core/_components-page.scss
@@ -17,4 +17,13 @@
 		padding: 10rem;
 		justify-content: space-between;
 	}
+
+	&__button-wrapper {
+		@include bp-xs {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			min-height: 20rem;
+		}
+	}
 }
